# finnstagram

./: .env  App.tsx  app.json  docker-compose.yml  lerna.json  package.json
android/app/: BUCK  build.gradle
api/: .env  package.json  tsconfig.json
api/src/: index.ts
api/src/models/: Comment.ts  MediaItem.ts  Post.ts  User.ts
api/src/routes/: index.ts  posts.ts  user.ts
app/: App.tsx  app.json  navigationParams.ts  package.json
app/android/: settings.gradle
app/components/comment/: comment.tsx
app/components/header/: header.tsx
app/components/post/: post.tsx
app/ios/: Podfile
app/ios/finnstagram.xcodeproj/: project.pbxproj
app/ios/finnstagram.xcworkspace/: contents.xcworkspacedata
app/redux/: rootReducer.ts  sagas.ts
app/services/: currentUser.ts  posts.ts  rest.ts
components/comment/: comment.tsx
components/header/: header.tsx
components/post/: post.tsx
ios/: Podfile
ios/finnstagram.xcodeproj/: project.pbxproj
redux/: index.ts
redux/currentUser/: reducers.ts  sagas.ts
redux/posts/: actions.ts  index.ts  reducers.ts  selectors.ts  types.ts
redux/uiState/: actions.ts  index.ts  selectors.ts
server/: .env  Cargo.toml
server/migrations/2020-09-18-170408_add_users/: up.sql
server/migrations/2020-11-27-054743_add_posts/: down.sql  up.sql
server/src/: main.rs  models.rs  schema.rs
server/src/posts/: handlers.rs
server/src/users/: handlers.rs  structs.rs
services/: currentUser.ts  posts.ts
workspaces/api/: .env  package.json
workspaces/app/: package.json
workspaces/rust-api/: Cargo.toml
(+50 files in other folders)
