[package]
name = "finnstagram-server"
version = "0.1.0"
authors = ["Chris Rock <chris.rock@logianalytics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-service = "1.0.1"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
alcoholic_jwt = "1.0.0"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.4", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.1"
listenfd = "0.3"
photon-rs = "0.2.0"
r2d2 = "0.8.9"
reqwest = "0.9.22"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.6", features = ["serde", "v4"] }